# blueprint_debugger

./: CMakeLists.txt  appveyor.yml
.github/workflows/: build.yml
blueprint_core/: CMakeLists.txt
blueprint_core/src/: blueprint_core.cpp  emmy_core.cpp
blueprint_debugger/: CMakeLists.txt
blueprint_debugger/src/: blueprint_debugger_manager.cpp  blueprint_facade.cpp  blueprint_helper.cpp  emmy_debugger.cpp  emmy_facade.cpp  hook_state.cpp  lua_version.cpp  stack.cpp  transporter.cpp
blueprint_debugger/src/api/: lua_api.cpp  lua_api_loader.cpp  lua_state.cpp
blueprint_debugger/src/api/lua_state/: lua_state_51.cpp  lua_state_52.cpp  lua_state_53.cpp  lua_state_54.cpp  lua_state_jit.cpp
blueprint_debugger/src/proto/: pipeline_client_transporter.cpp  pipeline_server_transporter.cpp  socket_client_transporter.cpp  socket_server_transporter.cpp
blueprint_hook/: CMakeLists.txt
blueprint_hook/src/: dllmain.cpp  emmy_hook.cpp  emmy_hook.windows.cpp
blueprint_hook/src/libpe/: htable.cpp  htable.h  libpe.cpp  libpe.h  llist.cpp  llist.h
blueprint_tool/: CMakeLists.txt
blueprint_tool/src/: emmy_tool.windows.cpp  main.cpp  utility.h
build_script/lua_exe/: CMakeLists.txt  buildLua51.ps1  buildLua52.ps1  buildLua53.ps1  buildLua54.ps1  readme.md
build_script/xlua_blueprint_core/: CMakeLists.txt  readme.md
include/blueprint_core/: emmy_core.h
include/blueprint_debugger/: blueprint_debugger.h  blueprint_debugger_manager.h  blueprint_facade.h  blueprint_helper.h  lua_version.h  transporter.h  types.h
include/blueprint_debugger/api/: lua_api.h  lua_api_loader.h
include/blueprint_debugger/proto/: pipeline_client_transporter.h  pipeline_server_transporter.h  socket_client_transporter.h  socket_server_transporter.h
include/shared/: shme.h
shared/src/: shme.cpp
